[gd_scene load_steps=3 format=3 uid="uid://c8y17n1nuiiko"]

[ext_resource type="Script" uid="uid://dvqc04o5nm3yt" path="res://scripts/quiz_ui.gd" id="1_quiz_ui"]
[ext_resource type="Texture2D" uid="uid://c27wi0uoqq03r" path="res://assets/interiors/答题ui-removebg-preview.png" id="2_4vc25"]

[node name="QuizUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_quiz_ui")
background_texture = ExtResource("2_4vc25")
option_button_width = 1200.0
option_button_font_size = 44

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -900.0
offset_top = -700.0
offset_right = 900.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTexture" type="TextureRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 280.0
offset_right = 400.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 72
text = "青年李白知识问答"
horizontal_alignment = 1

[node name="QuestionLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 440.0
offset_right = 450.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 52
text = "问题内容"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FeedbackLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 1030.0
offset_right = 400.0
offset_bottom = 1300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="SpacingContainer" type="Control" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 340.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 0

[node name="OptionsWrapper" type="Control" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 650.0
offset_right = 250.0
offset_bottom = 920.0
grow_horizontal = 2
grow_vertical = 0

[node name="OptionsContainer" type="VBoxContainer" parent="Control/Panel/OptionsWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressLabel" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -100.0
offset_right = -400.0
offset_bottom = -175.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "进度: 1/3"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = -380.0
offset_bottom = -175.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 42
disabled = false
text = "关闭"
