# ç­”é¢˜UIè„šæœ¬
extends CanvasLayer

signal quiz_completed(quiz_id: String, passed: bool)

# ==================== å¯¼å‡ºå˜é‡ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­é…ç½®ï¼‰====================
@export var background_texture: Texture2D = null  # èƒŒæ™¯å›¾ç‰‡ï¼ˆå¯é€‰ï¼‰
@export var option_button_width: float = 500.0  # é€‰é¡¹æŒ‰é’®å®½åº¦ï¼ˆé»˜è®¤500ï¼Œå¯æ ¹æ®å®¹å™¨å®½åº¦è°ƒæ•´ï¼‰
@export var option_button_font_size: int = 48  # é€‰é¡¹æŒ‰é’®å­—ä½“å¤§å°ï¼ˆé»˜è®¤48ï¼‰
@export var option_spacing: int = 18  # é€‰é¡¹æŒ‰é’®ä¹‹é—´çš„é—´è·ï¼ˆé»˜è®¤18åƒç´ ï¼‰

var current_quiz: Dictionary = {}
var current_questions: Array = []
var current_question_index: int = 0
var correct_count: int = 0
var quiz_id: String = ""

# ç­”é¢˜å†å²è®°å½•ï¼šè®°å½•æ¯é“é¢˜çš„ç­”æ¡ˆå’Œé€‰æ‹©
var answer_history: Array = []  # [{question_index, question, selected_option, correct_option, is_correct}, ...]

# èŠ‚ç‚¹å¼•ç”¨
var panel: Panel
var background_texture_rect: TextureRect
var title_label: Label
var question_label: Label
var options_container: VBoxContainer
var progress_label: Label
var feedback_label: Label
var close_button: Button
var history_button: Button  # å†å²æŸ¥çœ‹æŒ‰é’®
var history_panel: Panel  # å†å²æŸ¥çœ‹é¢æ¿

var api_client: Node = null

func _ready():
	# æ·»åŠ åˆ°quiz_uiç»„ï¼ˆå¿…é¡»åœ¨æœ€å‰é¢ï¼Œç¡®ä¿å…¶ä»–ä»£ç å¯ä»¥æ‰¾åˆ°å®ƒï¼‰
	add_to_group("quiz_ui")
	
	# è·å–èŠ‚ç‚¹å¼•ç”¨ï¼ˆæ³¨æ„ï¼šç°åœ¨ç»“æ„æ˜¯ CanvasLayer -> Control -> Panelï¼‰
	panel = get_node_or_null("Control/Panel")
	background_texture_rect = get_node_or_null("Control/Panel/BackgroundTexture")
	title_label = get_node_or_null("Control/Panel/TitleLabel")
	question_label = get_node_or_null("Control/Panel/QuestionLabel")
	options_container = get_node_or_null("Control/Panel/OptionsWrapper/OptionsContainer")
	progress_label = get_node_or_null("Control/Panel/ProgressLabel")
	feedback_label = get_node_or_null("Control/Panel/FeedbackLabel")
	close_button = get_node_or_null("Control/Panel/CloseButton")
	
	# è®¾ç½®èƒŒæ™¯å›¾ç‰‡ï¼ˆå¦‚æœæä¾›äº†ï¼‰
	if background_texture and background_texture_rect:
		background_texture_rect.texture = background_texture
		background_texture_rect.visible = true
		# å¦‚æœæœ‰èƒŒæ™¯å›¾ï¼Œè®¾ç½®Panelä¸ºé€æ˜ï¼Œè®©èƒŒæ™¯å›¾æ˜¾ç¤º
		if panel:
			var style_box = StyleBoxEmpty.new()
			panel.add_theme_stylebox_override("panel", style_box)
		print("[INFO] å·²è®¾ç½®ç­”é¢˜UIèƒŒæ™¯å›¾ç‰‡")
	elif background_texture_rect:
		background_texture_rect.visible = false
	
	# è®¾ç½®Panelä¸é€æ˜ï¼ˆå¦‚æœæ²¡æœ‰èƒŒæ™¯å›¾ç‰‡ï¼‰
	if panel and not background_texture:
		# è®¾ç½®Panelæ ·å¼ä¸ºä¸é€æ˜
		var style_box = StyleBoxFlat.new()
		style_box.bg_color = Color(0.1, 0.1, 0.15, 0.95)  # æ·±è‰²åŠé€æ˜èƒŒæ™¯
		style_box.border_color = Color(0.3, 0.3, 0.4, 1.0)  # è¾¹æ¡†é¢œè‰²
		style_box.border_width_left = 4
		style_box.border_width_top = 4
		style_box.border_width_right = 4
		style_box.border_width_bottom = 4
		style_box.corner_radius_top_left = 10
		style_box.corner_radius_top_right = 10
		style_box.corner_radius_bottom_left = 10
		style_box.corner_radius_bottom_right = 10
		panel.add_theme_stylebox_override("panel", style_box)
		print("[INFO] å·²è®¾ç½®Panelä¸é€æ˜èƒŒæ™¯")
	
	# è®¾ç½®æ–‡å­—é¢œè‰²ï¼ˆé€‚é…å·è½´èƒŒæ™¯çš„æµ…è‰²ï¼‰
	_setup_text_colors()
	
	# éªŒè¯èŠ‚ç‚¹å¼•ç”¨
	print("[INFO] ç­”é¢˜UIèŠ‚ç‚¹å¼•ç”¨çŠ¶æ€:")
	print("  - panel: ", panel != null)
	print("  - background_texture_rect: ", background_texture_rect != null)
	print("  - title_label: ", title_label != null)
	print("  - question_label: ", question_label != null)
	print("  - options_container: ", options_container != null)
	print("  - progress_label: ", progress_label != null)
	print("  - feedback_label: ", feedback_label != null)
	print("  - close_button: ", close_button != null)
	
	# åˆå§‹éšè—
	visible = false
	
	# è¿æ¥å…³é—­æŒ‰é’®ï¼ˆä¸€ç›´å¯ç”¨ï¼‰
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)
		close_button.disabled = false  # ä¸€ç›´å¯ç”¨
		# è®¾ç½®å…³é—­æŒ‰é’®æ ·å¼ä¸è¿›åº¦æ ‡ç­¾ä¸€è‡´
		_setup_close_button_style()
	else:
		print("[WARN] CloseButtonæœªæ‰¾åˆ°")
	
	# åˆ›å»ºå†å²æŸ¥çœ‹æŒ‰é’®
	#_create_history_button()
	
	# åˆ›å»ºå†å²æŸ¥çœ‹é¢æ¿
	#_create_history_panel()
	
	print("[INFO] ç­”é¢˜UIå·²åˆå§‹åŒ– (èŠ‚ç‚¹å: %s, å·²æ·»åŠ åˆ°quiz_uiç»„)" % name)
	
	# éªŒè¯æ˜¯å¦æˆåŠŸæ·»åŠ åˆ°ç»„
	if is_in_group("quiz_ui"):
		print("[INFO] âœ… QuizUIå·²æˆåŠŸæ·»åŠ åˆ°quiz_uiç»„")
	else:
		print("[ERROR] âŒ QuizUIæœªèƒ½æ·»åŠ åˆ°quiz_uiç»„")

	# è¿æ¥ APIClient, ç”¨äºè·å–åŠ¨æ€é¢˜ç›®
	api_client = get_node_or_null("/root/APIClient")
	if api_client:
		if api_client.has_signal("quiz_generated"):
			api_client.quiz_generated.connect(_on_quiz_generated)
		if api_client.has_signal("quiz_generation_failed"):
			api_client.quiz_generation_failed.connect(_on_quiz_generation_failed)
		print("[INFO] å·²è¿æ¥ APIClient ä»¥è·å–åŠ¨æ€é¢˜ç›®")
	else:
		print("[WARN] æœªæ‰¾åˆ° APIClient, å°†å§‹ç»ˆä½¿ç”¨æœ¬åœ°é¢˜åº“")

func start_quiz(quiz_id: String):
	"""å¼€å§‹ç­”é¢˜"""
	self.quiz_id = quiz_id
	current_quiz = QuizManager.get_quiz(quiz_id)
	
	if current_quiz.is_empty():
		print("[ERROR] ç­”é¢˜ä¸å­˜åœ¨: ", quiz_id)
		return

	# å…ˆå°è¯•åŠ¨æ€æ‹‰å–é¢˜ç›®, è‹¥å¤±è´¥åˆ™å›é€€åˆ°æœ¬åœ°é¢˜åº“
	var total_questions = current_quiz.get("total_questions", 3)
	_request_or_use_fallback_questions(total_questions)


func _request_or_use_fallback_questions(total_questions: int) -> void:
	"""ä¼˜å…ˆè¯·æ±‚åç«¯åŠ¨æ€é¢˜ç›®, å¤±è´¥æ—¶å›é€€æœ¬åœ°"""
	if api_client:
		var npc_name: String = str(current_quiz.get("npc_name", ""))
		if npc_name != "":
			api_client.get_generated_quiz(quiz_id, npc_name, total_questions)
			# ç­‰å¾…å¼‚æ­¥å›è°ƒ, æ­¤å¤„å…ˆæ˜¾ç¤ºåŠ è½½çŠ¶æ€
			current_questions = []
			current_question_index = 0
			correct_count = 0
			answer_history.clear()
			_show_loading_state()
			return
	
	# å¦‚æœæ²¡æœ‰ api_client æˆ– npc_name, ç›´æ¥ä½¿ç”¨æœ¬åœ°é¢˜åº“
	_use_fallback_questions(total_questions)


func _use_fallback_questions(total_questions: int) -> void:
	current_questions = QuizManager.get_random_questions(quiz_id, total_questions)
	if current_questions.is_empty():
		print("[ERROR] æ²¡æœ‰å¯ç”¨é¢˜ç›®")
		return

	current_question_index = 0
	correct_count = 0
	answer_history.clear()  # æ¸…ç©ºå†å²è®°å½•
	
	# â­ é‡æ–°è·å–èŠ‚ç‚¹å¼•ç”¨ï¼ˆç¡®ä¿èŠ‚ç‚¹å·²åŠ è½½ï¼‰
	_ensure_node_references()
	
	# éªŒè¯å…³é”®èŠ‚ç‚¹
	if not options_container:
		print("[ERROR] OptionsContainerèŠ‚ç‚¹æœªæ‰¾åˆ°ï¼")
		print("[DEBUG] å°è¯•é‡æ–°è·å–èŠ‚ç‚¹...")
		options_container = get_node_or_null("Control/Panel/OptionsWrapper/OptionsContainer")
		if not options_container:
			print("[ERROR] æ— æ³•æ‰¾åˆ°OptionsContainerèŠ‚ç‚¹")
			return
	
	# è®¾ç½®æ ‡é¢˜
	if title_label:
		title_label.text = current_quiz.get("title", "ç­”é¢˜")
	
	# æ˜¾ç¤ºUI
	visible = true
	print("[INFO] QuizUI visibleè®¾ç½®ä¸º: ", visible)
	
	# ç¡®ä¿Panelä¹Ÿå¯è§
	if panel:
		panel.visible = true
		print("[INFO] Panel visibleè®¾ç½®ä¸º: ", panel.visible)
	
	# ç¦ç”¨ç©å®¶ç§»åŠ¨
	var player = get_tree().get_first_node_in_group("player")
	if player:
		player.set_interacting(true)
	
	# æ˜¾ç¤ºç¬¬ä¸€é¢˜
	display_question()
	
	print("[INFO] å¼€å§‹ç­”é¢˜: ", quiz_id, " å…±", current_questions.size(), "é¢˜")


func _show_loading_state() -> void:
	"""åŠ¨æ€é¢˜ç›®åŠ è½½ä¸­çš„ç®€å•æç¤º"""
	_ensure_node_references()
	if title_label:
		title_label.text = current_quiz.get("title", "ç­”é¢˜")
	if question_label:
		question_label.text = "æ­£åœ¨ä¸ºä½ å‡†å¤‡ä¸ æç™½ ç›¸å…³çš„é¢˜ç›®..."
	if progress_label:
		progress_label.text = ""
	if feedback_label:
		feedback_label.text = ""
	visible = true


func _on_quiz_generated(generated_quiz_id: String, quiz_data: Dictionary) -> void:
	"""åŠ¨æ€é¢˜ç›®è·å–æˆåŠŸ"""
	if generated_quiz_id != "" and generated_quiz_id != quiz_id:
		return
	
	var total_questions = current_quiz.get("total_questions", 3)
	var questions: Array = quiz_data.get("questions", [])
	
	# å°†åŠ¨æ€é¢˜ç›®å†™å…¥ QuizManager ç¼“å­˜, ä¾¿äºé‡ç”¨
	QuizManager.set_dynamic_questions(quiz_id, questions)
	
	if questions.is_empty():
		print("[WARN] åŠ¨æ€é¢˜ç›®ä¸ºç©º, å›é€€åˆ°æœ¬åœ°é¢˜åº“")
		_use_fallback_questions(total_questions)
	else:
		current_questions = questions
		current_question_index = 0
		correct_count = 0
		answer_history.clear()
		# é‡æ–°è¿›å…¥å¸¸è§„å±•ç¤ºæµç¨‹
		_ensure_node_references()
		display_question()
		visible = true
		print("[INFO] ä½¿ç”¨åŠ¨æ€é¢˜ç›®å¼€å§‹ç­”é¢˜: ", quiz_id, " å…±", current_questions.size(), "é¢˜")


func _on_quiz_generation_failed(failed_quiz_id: String, _error_message: String) -> void:
	"""åŠ¨æ€é¢˜ç›®è·å–å¤±è´¥, å›é€€åˆ°æœ¬åœ°é¢˜åº“"""
	if failed_quiz_id != "" and failed_quiz_id != quiz_id:
		return
	var total_questions = current_quiz.get("total_questions", 3)
	print("[WARN] åŠ¨æ€é¢˜ç›®è·å–å¤±è´¥, ä½¿ç”¨æœ¬åœ°é¢˜åº“")
	_use_fallback_questions(total_questions)

func _ensure_node_references():
	"""ç¡®ä¿èŠ‚ç‚¹å¼•ç”¨å·²è·å–"""
	if not panel:
		panel = get_node_or_null("Control/Panel")
	if not background_texture_rect:
		background_texture_rect = get_node_or_null("Control/Panel/BackgroundTexture")
	if not title_label:
		title_label = get_node_or_null("Control/Panel/TitleLabel")
	if not question_label:
		question_label = get_node_or_null("Control/Panel/QuestionLabel")
	if not options_container:
		options_container = get_node_or_null("Control/Panel/OptionsWrapper/OptionsContainer")
	if not progress_label:
		progress_label = get_node_or_null("Control/Panel/ProgressLabel")
	if not feedback_label:
		feedback_label = get_node_or_null("Control/Panel/FeedbackLabel")
	if not close_button:
		close_button = get_node_or_null("Control/Panel/CloseButton")
	
	# éªŒè¯èŠ‚ç‚¹
	print("[DEBUG] èŠ‚ç‚¹å¼•ç”¨çŠ¶æ€:")
	print("  - panel: ", panel != null)
	print("  - background_texture_rect: ", background_texture_rect != null)
	print("  - title_label: ", title_label != null)
	print("  - question_label: ", question_label != null)
	print("  - options_container: ", options_container != null)
	print("  - progress_label: ", progress_label != null)
	print("  - feedback_label: ", feedback_label != null)
	print("  - close_button: ", close_button != null)

func display_question():
	"""æ˜¾ç¤ºå½“å‰é—®é¢˜"""
	if current_question_index >= current_questions.size():
		finish_quiz()
		return
	
	var question = current_questions[current_question_index]
	
	print("[DEBUG] æ˜¾ç¤ºé¢˜ç›® %d: %s" % [current_question_index + 1, question["question"]])
	
	# æ˜¾ç¤ºé—®é¢˜
	if question_label:
		question_label.text = question["question"]
		question_label.visible = true
		print("[DEBUG] é—®é¢˜æ ‡ç­¾æ–‡æœ¬: ", question_label.text)
	
	# æ˜¾ç¤ºè¿›åº¦
	if progress_label:
		progress_label.text = "è¿›åº¦: %d/%d" % [current_question_index + 1, current_questions.size()]
		progress_label.visible = true
	
	# æ¸…ç©ºåé¦ˆ
	if feedback_label:
		feedback_label.text = ""
		feedback_label.visible = false
	
	# å…³é—­æŒ‰é’®ä¸€ç›´å¯ç”¨ï¼Œä¸éœ€è¦ç¦ç”¨
	# æ›´æ–°å†å²æŒ‰é’®çŠ¶æ€
	if history_button:
		history_button.visible = (answer_history.size() > 0)
	
	# æ¸…ç©ºå¹¶åˆ›å»ºé€‰é¡¹æŒ‰é’®
	clear_options()
	create_option_buttons(question["options"])
	
	print("[DEBUG] å·²åˆ›å»º %d ä¸ªé€‰é¡¹æŒ‰é’®" % question["options"].size())

func create_option_buttons(options: Array):
	"""åˆ›å»ºé€‰é¡¹æŒ‰é’®"""
	if not options_container:
		print("[ERROR] OptionsContaineræœªæ‰¾åˆ°")
		return
	
	# è®¾ç½®å®¹å™¨é—´è·ï¼ˆä½¿ç”¨å¯¼å‡ºå˜é‡ï¼Œå¯åœ¨ç¼–è¾‘å™¨ä¸­è°ƒæ•´ï¼‰
	options_container.add_theme_constant_override("separation", option_spacing)
	
	# ç¡®ä¿å®¹å™¨æ˜¯ç©ºçš„
	clear_options()
	
	# æ ¹æ®æ˜¯å¦æœ‰èƒŒæ™¯å›¾å†³å®šæŒ‰é’®æ ·å¼
	var use_traditional_style = background_texture != null
	
	# ä½¿ç”¨å¯¼å‡ºå˜é‡ä¸­çš„æŒ‰é’®å®½åº¦ï¼ˆå¯åœ¨ç¼–è¾‘å™¨ä¸­è°ƒæ•´ï¼‰
	var button_width = option_button_width
	
	for i in range(options.size()):
		var button = Button.new()
		button.text = "%s. %s" % [char(65 + i), options[i]]  # A. é€‰é¡¹1, B. é€‰é¡¹2...
		button.custom_minimum_size = Vector2(button_width, 90)  # å®½åº¦å¯é…ç½®ï¼Œé«˜åº¦å›ºå®š
		button.add_theme_font_size_override("font_size", option_button_font_size)  # å­—ä½“å¤§å°å¯é…ç½®
		
		# è®¾ç½®æŒ‰é’®æ ·å¼ï¼ˆä¼ ç»Ÿå·è½´é£æ ¼ï¼‰
		if use_traditional_style:
			_setup_traditional_button_style(button)
		else:
			_setup_default_button_style(button)
		
		button.pressed.connect(_on_option_selected.bind(i))
		options_container.add_child(button)
		print("[DEBUG] åˆ›å»ºé€‰é¡¹æŒ‰é’® %d: %s" % [i, button.text])
	
	print("[DEBUG] å·²åˆ›å»º %d ä¸ªé€‰é¡¹æŒ‰é’®" % options.size())

func clear_options():
	"""æ¸…ç©ºé€‰é¡¹æŒ‰é’®"""
	if not options_container:
		print("[WARN] OptionsContaineræœªæ‰¾åˆ°ï¼Œæ— æ³•æ¸…ç©ºé€‰é¡¹")
		return
	
	for child in options_container.get_children():
		child.queue_free()

func _on_option_selected(option_index: int):
	"""é€‰é¡¹è¢«é€‰æ‹©"""
	var question = current_questions[current_question_index]
	
	# ç¦ç”¨æ‰€æœ‰æŒ‰é’®ï¼ˆé˜²æ­¢é‡å¤ç‚¹å‡»ï¼‰
	for button in options_container.get_children():
		button.disabled = true
	
	# è®°å½•ç­”é¢˜å†å²
	var selected_option = question["options"][option_index]
	var correct_option = question["options"][question["correct"]]
	var is_correct = (option_index == question["correct"])
	
	answer_history.append({
		"question_index": current_question_index,
		"question": question["question"],
		"options": question["options"].duplicate(),
		"selected_option": selected_option,
		"selected_index": option_index,
		"correct_option": correct_option,
		"correct_index": question["correct"],
		"is_correct": is_correct
	})
	
	# æ£€æŸ¥ç­”æ¡ˆ
	if is_correct:
		correct_count += 1
		show_feedback("å›ç­”æ­£ç¡®ï¼", Color.GREEN)
		print("[INFO] âœ… å›ç­”æ­£ç¡®")
		
		# â­ æ˜¾ç¤ºç­”é¢˜æ­£ç¡®å¥–åŠ±æ•ˆæœï¼ˆä¼ é€’å·²ç­”å¯¹çš„é¢˜ç›®æ•°é‡ï¼‰
		if has_node("/root/RewardEffectManager"):
			print("[DEBUG] ğŸ å‡†å¤‡æ˜¾ç¤ºç­”é¢˜å¥–åŠ±: correct_count=", correct_count)
			RewardEffectManager.show_quiz_reward(correct_count)
		else:
			print("[ERROR] âš ï¸ RewardEffectManageræœªæ‰¾åˆ°ï¼Œæ— æ³•æ˜¾ç¤ºç­”é¢˜å¥–åŠ±")
	else:
		show_feedback("å›ç­”é”™è¯¯ï¼æ­£ç¡®ç­”æ¡ˆæ˜¯: %s" % correct_option, Color.RED)
		print("[INFO] âŒ å›ç­”é”™è¯¯ï¼Œæ­£ç¡®ç­”æ¡ˆæ˜¯: ", correct_option)
	
	# æ›´æ–°å†å²æŒ‰é’®çŠ¶æ€
	if history_button:
		history_button.visible = true
	
	# ç­‰å¾…2ç§’åè‡ªåŠ¨åˆ‡æ¢åˆ°ä¸‹ä¸€é¢˜
	await get_tree().create_timer(2.0).timeout
	
	# æ¸…ç©ºå½“å‰é¢˜ç›®æ˜¾ç¤º
	clear_current_question()
	
	# åˆ‡æ¢åˆ°ä¸‹ä¸€é¢˜
	current_question_index += 1
	display_question()

func clear_current_question():
	"""æ¸…ç©ºå½“å‰é¢˜ç›®æ˜¾ç¤ºï¼ˆå‡†å¤‡æ˜¾ç¤ºä¸‹ä¸€é¢˜ï¼‰"""
	# æ¸…ç©ºé—®é¢˜æ–‡æœ¬
	if question_label:
		question_label.text = ""
	
	# æ¸…ç©ºåé¦ˆ
	if feedback_label:
		feedback_label.text = ""
		feedback_label.visible = false
	
	# æ¸…ç©ºé€‰é¡¹
	clear_options()

func show_feedback(message: String, color: Color):
	"""æ˜¾ç¤ºåé¦ˆ"""
	if feedback_label:
		feedback_label.text = message
		feedback_label.add_theme_color_override("font_color", color)
		feedback_label.visible = true

func finish_quiz():
	"""å®Œæˆç­”é¢˜"""
	var required = current_quiz.get("required_correct", current_questions.size())
	var passed = correct_count >= required
	
	# æ˜¾ç¤ºç»“æœ
	if passed:
		show_feedback("æ­å–œï¼ç­”é¢˜é€šè¿‡ï¼ç­”å¯¹äº† %d/%d é¢˜" % [correct_count, current_questions.size()], Color.GREEN)
		
		# æ ‡è®°ç­”é¢˜å®Œæˆ
		QuizManager.complete_quiz(quiz_id)
		
		# è§£é”ä¸‹ä¸€ä¸ªåŒºåŸŸ
		var target_region = current_quiz.get("target_region", 0)
		if target_region > 0:
			RegionManager.unlock_region(target_region)
		
		print("[INFO] âœ… ç­”é¢˜é€šè¿‡ï¼è§£é”åŒºåŸŸ %d" % target_region)
	else:
		show_feedback("å¾ˆé—æ†¾ï¼Œç­”é¢˜æœªé€šè¿‡ã€‚ç­”å¯¹äº† %d/%d é¢˜ï¼Œéœ€è¦ç­”å¯¹ %d é¢˜" % [correct_count, current_questions.size(), required], Color.RED)
		print("[INFO] âŒ ç­”é¢˜æœªé€šè¿‡")
	
	# å…³é—­æŒ‰é’®ä¸€ç›´å¯ç”¨ï¼Œä¸éœ€è¦å¯ç”¨
	# æ˜¾ç¤ºå†å²æŒ‰é’®ï¼ˆå¦‚æœæœ‰å†å²è®°å½•ï¼‰
	if history_button and answer_history.size() > 0:
		history_button.visible = true
	
	# ç­‰å¾…2ç§’åè‡ªåŠ¨å…³é—­ï¼ˆå¦‚æœç”¨æˆ·æ²¡æœ‰æ‰‹åŠ¨ç‚¹å‡»å…³é—­æŒ‰é’®ï¼‰
	await get_tree().create_timer(2.0).timeout
	
	# æ£€æŸ¥UIæ˜¯å¦ä»ç„¶å¯è§ï¼ˆå¦‚æœç”¨æˆ·å·²ç»ç‚¹å‡»å…³é—­æŒ‰é’®ï¼Œè¿™é‡Œä¼šè·³è¿‡ï¼‰
	if visible:
		hide()
		
		# æ¢å¤ç©å®¶ç§»åŠ¨
		var player = get_tree().get_first_node_in_group("player")
		if player:
			player.set_interacting(false)
		
		# å‘é€ä¿¡å·
		quiz_completed.emit(quiz_id, passed)

func _on_close_button_pressed():
	"""å…³é—­æŒ‰é’®è¢«ç‚¹å‡»ï¼ˆä¸€ç›´å¯ç”¨ï¼‰"""
	print("[INFO] ç”¨æˆ·ç‚¹å‡»å…³é—­æŒ‰é’®")
	
	# å¦‚æœå†å²é¢æ¿æ˜¾ç¤ºï¼Œå…ˆå…³é—­å†å²é¢æ¿
	if history_panel and history_panel.visible:
		history_panel.visible = false
		return
	
	hide()
	
	# æ¢å¤ç©å®¶ç§»åŠ¨
	var player = get_tree().get_first_node_in_group("player")
	if player:
		player.set_interacting(false)
	
	# å¦‚æœç­”é¢˜å·²å®Œæˆï¼Œå‘é€å®Œæˆä¿¡å·
	if current_question_index >= current_questions.size():
		var required = current_quiz.get("required_correct", current_questions.size())
		var passed = correct_count >= required
		quiz_completed.emit(quiz_id, passed)

func _setup_text_colors():
	"""è®¾ç½®æ–‡å­—é¢œè‰²ï¼ˆé€‚é…å·è½´èƒŒæ™¯çš„æµ…è‰²ï¼‰"""
	# å¦‚æœæœ‰èƒŒæ™¯å›¾ï¼Œä½¿ç”¨æ·±è‰²æ–‡å­—ï¼›å¦åˆ™ä½¿ç”¨æµ…è‰²æ–‡å­—
	var text_color = Color.WHITE
	if background_texture:
		# å·è½´èƒŒæ™¯æ˜¯æµ…è‰²ï¼Œä½¿ç”¨æ·±è‰²æ–‡å­—
		text_color = Color(0.2, 0.2, 0.2)  # æ·±ç°è‰²ï¼Œæ¥è¿‘é»‘è‰²
	
	if title_label:
		title_label.add_theme_color_override("font_color", text_color)
	
	if question_label:
		question_label.add_theme_color_override("font_color", text_color)
	
	if progress_label:
		progress_label.add_theme_color_override("font_color", text_color)
	
	if close_button:
		close_button.add_theme_color_override("font_color", text_color)

func _setup_traditional_button_style(button: Button):
	"""è®¾ç½®ä¼ ç»Ÿå·è½´é£æ ¼çš„æŒ‰é’®æ ·å¼ï¼ˆé’å¹´æ—¶æœŸï¼šç»¿è‰²ä¸»é¢˜ï¼‰"""
	# æ­£å¸¸çŠ¶æ€ï¼šæµ…ç»¿è‰²èƒŒæ™¯ï¼Œæ·±ç»¿è‰²è¾¹æ¡†
	var normal_style = StyleBoxFlat.new()
	normal_style.bg_color = Color(0.78, 0.9, 0.78, 0.9)  # æµ…ç»¿è‰²ï¼ŒåŠé€æ˜
	normal_style.border_color = Color(0.18, 0.31, 0.09)  # æ·±ç»¿è‰²è¾¹æ¡†
	normal_style.border_width_left = 3
	normal_style.border_width_top = 3
	normal_style.border_width_right = 3
	normal_style.border_width_bottom = 3
	normal_style.corner_radius_top_left = 8
	normal_style.corner_radius_top_right = 8
	normal_style.corner_radius_bottom_left = 8
	normal_style.corner_radius_bottom_right = 8
	button.add_theme_stylebox_override("normal", normal_style)
	
	# æ‚¬åœçŠ¶æ€ï¼šç»¿è‰²èƒŒæ™¯
	var hover_style = normal_style.duplicate()
	hover_style.bg_color = Color(0.3, 0.62, 0.31, 0.95)  # ç»¿è‰²
	button.add_theme_stylebox_override("hover", hover_style)
	
	# æŒ‰ä¸‹çŠ¶æ€ï¼šæ·±ç»¿è‰²èƒŒæ™¯
	var pressed_style = normal_style.duplicate()
	pressed_style.bg_color = Color(0.2, 0.5, 0.2, 0.95)  # æ·±ç»¿è‰²
	button.add_theme_stylebox_override("pressed", pressed_style)
	
	# ç¦ç”¨çŠ¶æ€ï¼šç°è‰²
	var disabled_style = normal_style.duplicate()
	disabled_style.bg_color = Color(0.8, 0.8, 0.8, 0.5)  # æµ…ç°è‰²ï¼ŒåŠé€æ˜
	disabled_style.border_color = Color(0.5, 0.5, 0.5)  # ç°è‰²è¾¹æ¡†
	button.add_theme_stylebox_override("disabled", disabled_style)
	
	# æ–‡å­—é¢œè‰²ï¼šæ·±è‰²
	button.add_theme_color_override("font_color", Color(0.2, 0.2, 0.2))
	button.add_theme_color_override("font_hover_color", Color(0.1, 0.1, 0.1))
	button.add_theme_color_override("font_pressed_color", Color(0.05, 0.05, 0.05))
	button.add_theme_color_override("font_disabled_color", Color(0.6, 0.6, 0.6))

func _setup_default_button_style(button: Button):
	"""è®¾ç½®é»˜è®¤æŒ‰é’®æ ·å¼ï¼ˆæ— èƒŒæ™¯å›¾æ—¶ä½¿ç”¨ï¼‰"""
	# æ­£å¸¸çŠ¶æ€ï¼šæ·±è‰²åŠé€æ˜èƒŒæ™¯
	var normal_style = StyleBoxFlat.new()
	normal_style.bg_color = Color(0.2, 0.2, 0.3, 0.8)
	normal_style.border_color = Color(0.4, 0.4, 0.5, 1.0)
	normal_style.border_width_left = 2
	normal_style.border_width_top = 2
	normal_style.border_width_right = 2
	normal_style.border_width_bottom = 2
	normal_style.corner_radius_top_left = 5
	normal_style.corner_radius_top_right = 5
	normal_style.corner_radius_bottom_left = 5
	normal_style.corner_radius_bottom_right = 5
	button.add_theme_stylebox_override("normal", normal_style)
	
	# æ‚¬åœçŠ¶æ€
	var hover_style = normal_style.duplicate()
	hover_style.bg_color = Color(0.3, 0.3, 0.4, 0.9)
	button.add_theme_stylebox_override("hover", hover_style)
	
	# æ–‡å­—é¢œè‰²ï¼šæµ…è‰²
	button.add_theme_color_override("font_color", Color.WHITE)

func _setup_close_button_style():
	"""è®¾ç½®å…³é—­æŒ‰é’®æ ·å¼ï¼Œä¸è¿›åº¦æ ‡ç­¾ä¸€è‡´"""
	if not close_button:
		return
	
	# è®¾ç½®å­—ä½“å¤§å°å’Œé¢œè‰²ä¸è¿›åº¦æ ‡ç­¾ä¸€è‡´
	var text_color = Color.WHITE
	if background_texture:
		text_color = Color(0.2, 0.2, 0.2)  # æ·±ç°è‰²ï¼Œé€‚é…å·è½´èƒŒæ™¯
	
	close_button.add_theme_font_size_override("font_size", 42)  # ä¸è¿›åº¦æ ‡ç­¾ä¸€è‡´
	close_button.add_theme_color_override("font_color", text_color)
	
	# è®¾ç½®æŒ‰é’®æ ·å¼ä¸ºé€æ˜èƒŒæ™¯ï¼ˆç±»ä¼¼Labelï¼‰
	var style_box = StyleBoxEmpty.new()
	close_button.add_theme_stylebox_override("normal", style_box)
	close_button.add_theme_stylebox_override("hover", style_box)
	close_button.add_theme_stylebox_override("pressed", style_box)
	
	# æ‚¬åœæ—¶ç¨å¾®å˜äº®
	var hover_style = StyleBoxFlat.new()
	hover_style.bg_color = Color(1.0, 1.0, 1.0, 0.1)  # åŠé€æ˜ç™½è‰²
	close_button.add_theme_stylebox_override("hover", hover_style)

func _create_history_button():
	"""åˆ›å»ºå†å²æŸ¥çœ‹æŒ‰é’®"""
	if not panel:
		return
	
	history_button = Button.new()
	history_button.text = "æŸ¥çœ‹å†å²"
	history_button.name = "HistoryButton"
	history_button.visible = false  # åˆå§‹éšè—ï¼Œæœ‰å†å²è®°å½•åæ˜¾ç¤º
	
	# è®¾ç½®ä½ç½®ï¼šåœ¨è¿›åº¦æ ‡ç­¾å’Œå…³é—­æŒ‰é’®ä¹‹é—´
	history_button.anchors_preset = Control.PRESET_BOTTOM_LEFT
	history_button.offset_left = 50
	history_button.offset_top = -100
	history_button.offset_right = 200
	history_button.offset_bottom = -40
	
	# è®¾ç½®æ ·å¼ä¸è¿›åº¦æ ‡ç­¾ä¸€è‡´
	history_button.add_theme_font_size_override("font_size", 42)
	var text_color = Color.WHITE
	if background_texture:
		text_color = Color(0.2, 0.2, 0.2)
	history_button.add_theme_color_override("font_color", text_color)
	
	var style_box = StyleBoxEmpty.new()
	history_button.add_theme_stylebox_override("normal", style_box)
	var hover_style = StyleBoxFlat.new()
	hover_style.bg_color = Color(1.0, 1.0, 1.0, 0.1)
	history_button.add_theme_stylebox_override("hover", hover_style)
	
	history_button.pressed.connect(_on_history_button_pressed)
	panel.add_child(history_button)

func _create_history_panel():
	"""åˆ›å»ºå†å²æŸ¥çœ‹é¢æ¿"""
	if not panel:
		return
	
	history_panel = Panel.new()
	history_panel.name = "HistoryPanel"
	history_panel.visible = false
	history_panel.anchors_preset = Control.PRESET_FULL_RECT
	history_panel.offset_left = 50
	history_panel.offset_top = 100
	history_panel.offset_right = -50
	history_panel.offset_bottom = -200
	
	# è®¾ç½®èƒŒæ™¯æ ·å¼
	var style_box = StyleBoxFlat.new()
	if background_texture:
		style_box.bg_color = Color(0.95, 0.95, 0.9, 0.98)  # æµ…è‰²èƒŒæ™¯
	else:
		style_box.bg_color = Color(0.1, 0.1, 0.15, 0.95)  # æ·±è‰²èƒŒæ™¯
	style_box.border_color = Color(0.3, 0.3, 0.4, 1.0)
	style_box.border_width_left = 4
	style_box.border_width_top = 4
	style_box.border_width_right = 4
	style_box.border_width_bottom = 4
	style_box.corner_radius_top_left = 10
	style_box.corner_radius_top_right = 10
	style_box.corner_radius_bottom_left = 10
	style_box.corner_radius_bottom_right = 10
	history_panel.add_theme_stylebox_override("panel", style_box)
	
	# åˆ›å»ºæ»šåŠ¨å®¹å™¨
	var scroll_container = ScrollContainer.new()
	scroll_container.anchors_preset = Control.PRESET_FULL_RECT
	scroll_container.offset_left = 20
	scroll_container.offset_top = 60
	scroll_container.offset_right = -20
	scroll_container.offset_bottom = -60
	
	# åˆ›å»ºå†…å®¹å®¹å™¨
	var content_container = VBoxContainer.new()
	content_container.name = "ContentContainer"
	scroll_container.add_child(content_container)
	history_panel.add_child(scroll_container)
	
	# åˆ›å»ºæ ‡é¢˜
	var title = Label.new()
	title.text = "ç­”é¢˜å†å²"
	title.add_theme_font_size_override("font_size", 56)
	var text_color = Color.WHITE
	if background_texture:
		text_color = Color(0.2, 0.2, 0.2)
	title.add_theme_color_override("font_color", text_color)
	title.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	title.anchors_preset = Control.PRESET_TOP_WIDE
	title.offset_bottom = 50
	history_panel.add_child(title)
	
	# åˆ›å»ºå…³é—­æŒ‰é’®
	var close_btn = Button.new()
	close_btn.text = "å…³é—­"
	close_btn.anchors_preset = Control.PRESET_TOP_RIGHT
	close_btn.offset_left = -100
	close_btn.offset_top = 10
	close_btn.offset_right = -20
	close_btn.offset_bottom = 50
	close_btn.pressed.connect(func(): history_panel.visible = false)
	close_btn.add_theme_font_size_override("font_size", 42)
	close_btn.add_theme_color_override("font_color", text_color)
	history_panel.add_child(close_btn)
	
	panel.add_child(history_panel)

func _on_history_button_pressed():
	"""å†å²æŒ‰é’®è¢«ç‚¹å‡»"""
	if not history_panel:
		return
	
	history_panel.visible = not history_panel.visible
	
	if history_panel.visible:
		_update_history_display()

func _update_history_display():
	"""æ›´æ–°å†å²æ˜¾ç¤º"""
	if not history_panel:
		return
	
	var content_container = history_panel.get_node_or_null("ScrollContainer/ContentContainer")
	if not content_container:
		return
	
	# æ¸…ç©ºç°æœ‰å†…å®¹
	for child in content_container.get_children():
		child.queue_free()
	
	# æ˜¾ç¤ºæ¯é“é¢˜çš„å†å²
	for i in range(answer_history.size()):
		var history_item = answer_history[i]
		var item_panel = _create_history_item(history_item, i + 1)
		content_container.add_child(item_panel)

func _create_history_item(history_item: Dictionary, question_num: int) -> Panel:
	"""åˆ›å»ºå•ä¸ªå†å²é¢˜ç›®æ˜¾ç¤ºé¡¹"""
	var item_panel = Panel.new()
	
	# è®¾ç½®æ ·å¼
	var style_box = StyleBoxFlat.new()
	if background_texture:
		style_box.bg_color = Color(1.0, 1.0, 1.0, 0.5)  # åŠé€æ˜ç™½è‰²
	else:
		style_box.bg_color = Color(0.2, 0.2, 0.3, 0.5)  # åŠé€æ˜æ·±è‰²
	style_box.border_color = Color(0.4, 0.4, 0.5, 1.0)
	style_box.border_width_left = 2
	style_box.border_width_top = 2
	style_box.border_width_right = 2
	style_box.border_width_bottom = 2
	style_box.corner_radius_top_left = 5
	style_box.corner_radius_top_right = 5
	style_box.corner_radius_bottom_left = 5
	style_box.corner_radius_bottom_right = 5
	item_panel.add_theme_stylebox_override("panel", style_box)
	
	var container = VBoxContainer.new()
	container.anchors_preset = Control.PRESET_FULL_RECT
	container.offset_left = 20
	container.offset_top = 20
	container.offset_right = -20
	container.offset_bottom = -20
	
	# é¢˜ç›®ç¼–å·å’Œé—®é¢˜
	var question_label = Label.new()
	question_label.text = "ç¬¬ %d é¢˜: %s" % [question_num, history_item["question"]]
	question_label.add_theme_font_size_override("font_size", 40)
	var text_color = Color.WHITE
	if background_texture:
		text_color = Color(0.2, 0.2, 0.2)
	question_label.add_theme_color_override("font_color", text_color)
	question_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	container.add_child(question_label)
	
	# æ˜¾ç¤ºæ‰€æœ‰é€‰é¡¹
	for j in range(history_item["options"].size()):
		var option_label = Label.new()
		var option_text = "%s. %s" % [char(65 + j), history_item["options"][j]]
		
		# æ ‡è®°æ­£ç¡®ç­”æ¡ˆ
		if j == history_item["correct_index"]:
			option_text += " âœ“ (æ­£ç¡®ç­”æ¡ˆ)"
			option_label.add_theme_color_override("font_color", Color.GREEN)
		# æ ‡è®°ç”¨æˆ·é€‰æ‹©çš„é”™è¯¯ç­”æ¡ˆ
		elif j == history_item["selected_index"] and not history_item["is_correct"]:
			option_text += " âœ— (ä½ çš„é€‰æ‹©)"
			option_label.add_theme_color_override("font_color", Color.RED)
		else:
			if background_texture:
				option_label.add_theme_color_override("font_color", Color(0.3, 0.3, 0.3))
			else:
				option_label.add_theme_color_override("font_color", Color(0.8, 0.8, 0.8))
		
		option_label.text = option_text
		option_label.add_theme_font_size_override("font_size", 36)
		option_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
		container.add_child(option_label)
	
	# æ˜¾ç¤ºç»“æœ
	var result_label = Label.new()
	if history_item["is_correct"]:
		result_label.text = "âœ“ å›ç­”æ­£ç¡®"
		result_label.add_theme_color_override("font_color", Color.GREEN)
	else:
		result_label.text = "âœ— å›ç­”é”™è¯¯ï¼Œä½ é€‰æ‹©äº†: %s" % history_item["selected_option"]
		result_label.add_theme_color_override("font_color", Color.RED)
	result_label.add_theme_font_size_override("font_size", 36)
	container.add_child(result_label)
	
	item_panel.add_child(container)
	item_panel.custom_minimum_size = Vector2(0, 200)  # è®¾ç½®æœ€å°é«˜åº¦
	
	return item_panel
